src/test/ui/edition-keywords-2018-2015-expansion.stderr
error: expected identifier, found reserved keyword `proc`
  --> $DIR/edition-keywords-2018-2015-expansion.rs:29:5
   |
LL |     produces_proc! {} // ERROR expected identifier, found reserved keyword
   |     ^^^^^^^^^^^^^^^^^ expected identifier, found reserved keyword
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

